Fixed horizontal scrollbar from appearing during theme changing

--- a/public/styles/general-style.css
+++ b/public/styles/general-style.css
@@ -9,7 +9,7 @@ body {
     color: var(--text);
     background: var(--bg);
     /* display: block; */
-    /* overflow: hidden; */
+    overflow-x: hidden;
     /* padding-bottom: 20px; */
 }
 
